Add contract types to offers with filters
